Fix visibility quirks on spell cards

--- a/src/styles/legacy/_chat.scss
+++ b/src/styles/legacy/_chat.scss
@@ -44,6 +44,9 @@
     }
 
     .card-buttons {
+        display: flex;
+        flex-basis: 100%;
+        flex-direction: column;
         margin: 5px 0;
 
         span {
@@ -57,7 +60,13 @@
             margin: 2px 0;
         }
 
-        .spell-attack-buttons {
+        .owner-buttons {
+            display: flex;
+            flex-basis: 100%;
+            flex-direction: column;
+        }
+
+        .spell-attack-buttons, .spell-button {
             display: flex;
             flex-direction: row;
 
